[gd_scene load_steps=5 format=3 uid="uid://be07t3wys0ugv"]

[ext_resource type="Texture2D" uid="uid://ci5ql42dhwtv2" path="res://tile.png" id="1_0xl3i"]
[ext_resource type="Script" path="res://tile.gd" id="2_gd8uo"]
[ext_resource type="Texture2D" uid="uid://cwih34ibnrk6s" path="res://counter.png" id="3_7jenx"]
[ext_resource type="Texture2D" uid="uid://cp2ivugysqpxc" path="res://walls.png" id="4_ann10"]

[node name="Tile" type="Sprite2D"]
texture = ExtResource("1_0xl3i")
script = ExtResource("2_gd8uo")
_highlight_color = Color(0, 1, 1, 1)

[node name="Counter" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_7jenx")

[node name="WallTop" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_ann10")
hframes = 4

[node name="WallRight" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_ann10")
hframes = 4
frame = 1

[node name="WallLeft" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_ann10")
hframes = 4
frame = 2

[node name="WallBottom" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_ann10")
hframes = 4
frame = 3
